--- a/goods-list.html
+++ b/goods-list.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Staatliches&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -116,8 +117,8 @@
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">캐시미어 디자인</strong>
-                      <p class="txt-shopping-desc"></p>
+                      <strong class="txt-shopping-tit">캐시미어 가디건</strong>
+                      <p class="txt-shopping-desc">3,800,000</p>
 
                     </div>
                   </a>
@@ -126,12 +127,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UPG/UPG374/1V97F0005/UPG374_1V97_F0005_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">스웨이드 재킷</strong>
+                      <p class="txt-shopping-desc">7,850,000</p>
 
                     </div>
                   </a>
@@ -140,12 +141,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SC6/SC696/108IF0002/SC696_108I_F0002_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">스트레치 코튼 셔츠</strong>
+                      <p class="txt-shopping-desc">2,150,000</p>
                     </div>
                   </a>
                 </li>
@@ -153,12 +154,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/G/GEP/GEP351/12PAF01CD/GEP351_12PA_F01CD_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">5포켓불 데님 진</strong>
+                      <p class="txt-shopping-desc">1,460,000</p>
                     </div>
                   </a>
                 </li>
@@ -166,11 +167,50 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SC7/SC700/13BRF0A08/SC700_13BR_F0A08_S_232_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
+                      <strong class="txt-shopping-tit">실크 셔츠</strong>
+                      <p class="txt-shopping-desc">2,950,000</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SGC/SGC036/13C6F0031/SGC036_13C6_F0031_S_221_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">울 및 모헤어 코트</strong>
+                      <p class="txt-shopping-desc">5,200,000</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UCS/UCS438/1VIVF067K/UCS438_1VIV_F067K_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">반팔 코튼 셔츠</strong>
+                      <p class="txt-shopping-desc">1,740,000</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb-shopping">
+                      <img
+                        src="https://www.prada.com/content/dam/pradabkg_products/G/GEB/GEB221/12CDF0F4Q/GEB221_12CD_F0F4Q_S_222_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        alt="옷1">
+                    </div>
+                    <div class="txt-shopping">
+                      <strong class="txt-shopping-tit">불 데님 베스트</strong>
                       <p class="txt-shopping-desc">상품설명</p>
                     </div>
                   </a>
@@ -179,51 +219,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SPH/SPH284/12VCF022E/SPH284_12VC_F022E_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <div class="thumb-shopping">
-                      <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                        alt="옷1">
-                    </div>
-                    <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <div class="thumb-shopping">
-                      <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                        alt="옷1">
-                    </div>
-                    <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <div class="thumb-shopping">
-                      <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                        alt="옷1">
-                    </div>
-                    <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">스트레치 포플린 팬츠</strong>
+                      <p class="txt-shopping-desc">2,100,000</p>
                     </div>
                   </a>
                 </li>
@@ -231,7 +232,7 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UPP/UPP224/1WDVF0002/UPP224_1WDV_F0002_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1000.1000.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
