--- a/goods-list.html
+++ b/goods-list.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="txt-shopping">
                       <strong class="txt-shopping-tit">캐시미어 가디건</strong>
-                      <p class="txt-shopping-desc">3,800,000</p>
+                      <p class="txt-shopping-desc">₩ 3,800,000</p>
 
                     </div>
                   </a>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="txt-shopping">
                       <strong class="txt-shopping-tit">스웨이드 재킷</strong>
-                      <p class="txt-shopping-desc">7,850,000</p>
+                      <p class="txt-shopping-desc">₩ 7,850,000</p>
 
                     </div>
                   </a>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="txt-shopping">
                       <strong class="txt-shopping-tit">스트레치 코튼 셔츠</strong>
-                      <p class="txt-shopping-desc">2,150,000</p>
+                      <p class="txt-shopping-desc">₩ 2,150,000</p>
                     </div>
                   </a>
                 </li>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="txt-shopping">
                       <strong class="txt-shopping-tit">5포켓불 데님 진</strong>
-                      <p class="txt-shopping-desc">1,460,000</p>
+                      <p class="txt-shopping-desc">₩ 1,460,000</p>
                     </div>
                   </a>
                 </li>
@@ -167,12 +167,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/S/SC7/SC700/13BRF0A08/SC700_13BR_F0A08_S_232_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SC4/SC449/1WQ8F0002/SC449_1WQ8_F0002_S_182_MDDA.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">실크 셔츠</strong>
-                      <p class="txt-shopping-desc">2,950,000</p>
+                      <strong class="txt-shopping-tit">리나일론반팔셔츠</strong>
+                      <p class="txt-shopping-desc">₩ 1,840,000</p>
                     </div>
                   </a>
                 </li>
@@ -180,12 +180,14 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/S/SGC/SGC036/13C6F0031/SGC036_13C6_F0031_S_221_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UGM/UGM169/13C6F0031/UGM169_13C6_F0031_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">울 및 모헤어 코트</strong>
-                      <p class="txt-shopping-desc">5,200,000</p>
+                      <strong class="txt-shopping-tit">
+                        싱글 브레스티드 모헤어 울 재킷
+                      </strong>
+                      <p class="txt-shopping-desc">₩ 5,550,000</p>
                     </div>
                   </a>
                 </li>
@@ -198,7 +200,7 @@
                     </div>
                     <div class="txt-shopping">
                       <strong class="txt-shopping-tit">반팔 코튼 셔츠</strong>
-                      <p class="txt-shopping-desc">1,740,000</p>
+                      <p class="txt-shopping-desc">₩ 1,740,000</p>
                     </div>
                   </a>
                 </li>
@@ -206,12 +208,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/G/GEB/GEB221/12CDF0F4Q/GEB221_12CD_F0F4Q_S_222_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SGB/SGB033/1RL7F0K74/SGB033_1RL7_F0K74_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">불 데님 베스트</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">크롭 코듀로이 다운 베스트</strong>
+                      <p class="txt-shopping-desc">₩ 3,050,000</p>
                     </div>
                   </a>
                 </li>
@@ -219,12 +221,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/S/SPH/SPH284/12VCF022E/SPH284_12VC_F022E_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SPH/SPH291/108IF0002/SPH291_108I_F0002_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">스트레치 포플린 팬츠</strong>
-                      <p class="txt-shopping-desc">2,100,000</p>
+                      <strong class="txt-shopping-tit">스트레치 코튼 팬츠</strong>
+                      <p class="txt-shopping-desc">₩ 1,740,000</p>
                     </div>
                   </a>
                 </li>
@@ -232,12 +234,14 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UPP/UPP224/1WDVF0002/UPP224_1WDV_F0002_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1000.1000.jpg"
+                        src="https://www.prada.com/content/dam/pradanux_products/S/SGC/SGC400/1WQ8F0002/SGC400_1WQ8_F0002_S_232_MDD.png/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">
+                        리나일론 크롭 다운 재킷
+                      </strong>
+                      <p class="txt-shopping-desc">₩ 8,700,000</p>
                     </div>
                   </a>
                 </li>
@@ -245,12 +249,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SPG/SPG32/1WQ8F0002/SPG32_1WQ8_F0002_S_182_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">리나일론 버뮤다</strong>
+                      <p class="txt-shopping-desc">₩ 1,430,000</p>
                     </div>
                   </a>
                 </li>
@@ -258,12 +262,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMB/UMB481/11J6F0967/UMB481_11J6_F0967_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">울 및 캐시미어 크루넥 스웨터</strong>
+                      <p class="txt-shopping-desc">₩ 3,050,000</p>
                     </div>
                   </a>
                 </li>
@@ -271,12 +275,16 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/G/GEB/GEB218/10UJF0008/GEB218_10UJ_F0008_S_212_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">
+                        패딩 데님 재킷
+                      </strong>
+                      <p class="txt-shopping-desc">₩ 4,200,000
+
+                      </p>
                     </div>
                   </a>
                 </li>
@@ -284,12 +292,14 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UPW/UPW445/11FVF0002/UPW445_11FV_F0002_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">
+                        칼간 재킷
+                      </strong>
+                      <p class="txt-shopping-desc">₩ 20,900,000</p>
                     </div>
                   </a>
                 </li>
@@ -297,12 +307,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SGC/SGC350/1WQ8F0ARF/SGC350_1WQ8_F0ARF_S_232_MDD.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">리나일론 크롭 다운 재킷</strong>
+                      <p class="txt-shopping-desc">₩ 4,000,000</p>
                     </div>
                   </a>
                 </li>
@@ -310,12 +320,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SGB/SGB903/1WQ8F0002/SGB903_1WQ8_F0002_S_222_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">리나일론 바머 재킷</strong>
+                      <p class="txt-shopping-desc">₩ 4,200,000</p>
                     </div>
                   </a>
                 </li>
@@ -323,12 +333,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SC6/SC609/12U9F03EM/SC609_12U9_F03EM_S_221_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">코튼 셔츠</strong>
+                      <p class="txt-shopping-desc">₩ 1,650,000</p>
                     </div>
                   </a>
                 </li>
@@ -336,12 +346,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradanux_products/U/UJN/UJN703/1YEDF0806/UJN703_1YED_F0806_S_211_SLF.png/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">나일론 디테일 스트레치 코튼 폴로 셔츠</strong>
+                      <p class="txt-shopping-desc">₩ 1,430,000</p>
                     </div>
                   </a>
                 </li>
@@ -349,12 +359,12 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/U/UCS/UCS418/1XV2F0009/UCS418_1XV2_F0009_S_221_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">반팔 코튼 셔츠</strong>
+                      <p class="txt-shopping-desc">₩ 1,740,000</p>
                     </div>
                   </a>
                 </li>
@@ -362,16 +372,21 @@
                   <a href="#">
                     <div class="thumb-shopping">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/G/GEC/GEC068/12N1F0V3N/GEC068_12N1_F0V3N_S_212_MDD.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                         alt="옷1">
                     </div>
                     <div class="txt-shopping">
-                      <strong class="txt-shopping-tit">제목</strong>
-                      <p class="txt-shopping-desc">상품설명</p>
+                      <strong class="txt-shopping-tit">샴브레이 셔츠</strong>
+                      <p class="txt-shopping-desc">₩ 1,740,000</p>
                     </div>
                   </a>
                 </li>
               </ul>
+              <a href="#" class="btn">
+                <div class="btn_more_box">
+                  <h2 class="btn_tit">제품 더보기</h2>
+                </div>
+              </a>
             </div>
           </div>
         </section>
