--- a/index.html
+++ b/index.html
@@ -44,15 +44,19 @@
   <div class="wrap">
     <!-- logo 왼쪽 type -->
     <header data-include-path="./outline/header.html"></header>
-    c
-
     <!-- <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div> -->
-    <div class="swiper-pagination"></div>
-
+    <!-- <div class="swiper-pagination"></div> -->
     <main id="main">
       <section class="container section-g section-collection">
         <div class="inner">
+          <!--YOUTUBE VIDEO-->
+          <section class="youtube">
+            <div class="youtube__area">
+              <div id="player"></div>
+            </div>
+            <div class="youtube__cover"></div>
+          </section>
           <h2 class="section-event blind">collection</h2>
           <div class="section-contents">
             <ul>
