--- a/detailpage.html
+++ b/detailpage.html
@@ -87,17 +87,27 @@
           </div>
           <div class="thumb_wrap">
             <p class="item_tit">
-              컬러 :
-              <span Class="dispColor">(1)CamelBrown</span>
+              컬러
+              <span Class="dispColor"></span>
             </p>
             <ul class="select_color">
               <li>
-                <input type="radio">
-                <label for="colCode_NBN0D4293316">
-                </label>
+                <input type="radio" id="color" class="radio_select">
+                <label for="color">(1)CamelBrown</label>
               </li>
             </ul>
           </div>
+          <section class="pr_option">
+            <div class="pr_info">
+              <h2 class="title">FROM THE RUNWAY <br> 캐시미어 카디건</h2>
+              <div class="price">
+                <span class="won">
+                  <strong class="disprice">3,850,000</strong>
+                  원
+                </span>
+              </div>
+            </div>
+          </section>
         </div>
       </section>
     </main>
