--- a/detailpage.html
+++ b/detailpage.html
@@ -106,6 +106,40 @@
                   원
                 </span>
               </div>
+              <div class="size_info">
+                <h3 class="cloth_size_choice">사이즈선택</h3>
+                <a href="#" target="_blank" class="cloth_size_guide">사이즈안내</a>
+              </div>
+              <ul class="size_wrap">
+                <li>
+                 <input type="radio" id="size" class="radio_select">
+                     <label for="size">44</label>
+                </li>
+              <li>
+                 <input type="radio" id="size" class="radio_select">
+                     <label for="size">46</label>
+                </li>
+                <li>
+                 <input type="radio" id="size" class="radio_select">
+                     <label for="size">48</label>
+                </li>
+                <li>
+                 <input type="radio" id="size" class="radio_select">
+                     <label for="size">50</label>
+                </li>
+                <li>
+                 <input type="radio" id="size" class="radio_select">
+                     <label for="size">52</label>
+                </li>
+              </ul>
+             <div class="button_wrapper">
+              <button type="button" class="cart" aria-label="장바구니">장바구니</button>
+              <button type="button" class="wish_list" aria-label="위시리스트">
+                <span class="wish_txt">위시리스트</span>
+              </button>
+             </div>
+            </div>
+            </form>
             </div>
           </section>
         </div>
