--- a/detailpage.html
+++ b/detailpage.html
@@ -20,7 +20,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Staatliches&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -53,6 +52,13 @@
             <div class="thumb">
               <img
                 src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                alt="detail_cloth">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="thumb">
+              <img
+                src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                 alt="detail_cloth">
             </div>
           </div>
@@ -99,7 +105,7 @@
           </div>
           <section class="pr_option">
             <div class="pr_info">
-              <h2 class="title">FROM THE RUNWAY <br> 캐시미어 카디건</h2>
+              <h2 class="title"><span>FROM THE RUNWAY</span> <br>캐시미어 카디건</h2>
               <div class="price">
                 <span class="won">
                   <strong class="disprice">3,850,000</strong>
@@ -112,42 +118,170 @@
               </div>
               <ul class="size_wrap">
                 <li>
-                 <input type="radio" id="size" class="radio_select">
-                     <label for="size">44</label>
-                </li>
-              <li>
-                 <input type="radio" id="size" class="radio_select">
-                     <label for="size">46</label>
+                  <input type="radio" id="size" class="radio_select">
+                  <label for="size">SS</label>
                 </li>
                 <li>
-                 <input type="radio" id="size" class="radio_select">
-                     <label for="size">48</label>
+                  <input type="radio" id="size" class="radio_select">
+                  <label for="size">S</label>
                 </li>
                 <li>
-                 <input type="radio" id="size" class="radio_select">
-                     <label for="size">50</label>
+                  <input type="radio" id="size" class="radio_select">
+                  <label for="size">M</label>
                 </li>
                 <li>
-                 <input type="radio" id="size" class="radio_select">
-                     <label for="size">52</label>
+                  <input type="radio" id="size" class="radio_select">
+                  <label for="size">L</label>
+                </li>
+                <li>
+                  <input type="radio" id="size" class="radio_select">
+                  <label for="size">XL</label>
                 </li>
               </ul>
-             <div class="button_wrapper">
-              <button type="button" class="cart" aria-label="장바구니">장바구니</button>
-              <button type="button" class="wish_list" aria-label="위시리스트">
-                <span class="wish_txt">위시리스트</span>
+              <div class="button_wrapper">
+                <button type="button" class="cart" aria-label="장바구니">장바구니</button>
+                <button type="button" class="wish_list" aria-label="위시리스트">
+                  <span class="wish_txt">위시리스트</span>
+                </button>
+              </div>
+              <div class="description-preview">
+                <p>절제된 라인의 디자인으로 고급 캐시미어 카디건의 세련된 스타일을 완성합니다.
+                  전면 버튼 클로저가 있는 카디건으로, 립 조직 니트 트림이 특징입니다.
+                  아이코닉한 니트 트라이앵글이돋보입니다.</p>
+                <ul>
+                  <li>
+                    <h3 class="description_preview_color_description">현재 컬러: 카멜 브라운</h3>
+                  </li>
+                  <li>
+                    <h3 class="description_preview_style_color">제품 코드: UMG263_13J6_F0040_S_232</h3>
+                  </li>
+                </ul>
+              </div>
+              <button type="button" class="product_detail_info">
+                <span>제품 상세 정보 더보기</span>
               </button>
-             </div>
-            </div>
-            </form>
+              <!-- <div class="footer-navigations-container">
+                <div class="footer-navigation-wrapper">
+                  <h4 class="footer-navigation-title">사이즈 & 팁
+                    <i class="las la-chevron-down"></i>
+                  </h4>
+                </div>
+                <div class="footer-navigation-wrapper">
+                  <h4 class="footer-navigation-title">무료배송 및 반품
+                    <i class="las la-chevron-down"></i>
+                  </h4>
+                </div>
+                <div class="footer-navigation-wrapper">
+                  <h4 class="footer-navigation-title">리뷰(3)
+                    <i class="las la-chevron-down"></i>
+                  </h4>
+                </div>
+                <div class="footer-navigation-wrapper">
+                  <h4 class="footer-navigation-title"> 추가정보
+                    <i class="las la-chevron-down"></i>
+                  </h4>
+                </div>
+              </div> -->
+              <!-- <div class="wrapper center-block">
+                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                  <div class="panel panel-default">
+                    <div class="panel-heading active" role="tab" id="headingOne">
+                      <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
+                          aria-expanded="true" aria-controls="collapseOne">
+                          사이즈 및 팁
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
+                      aria-labelledby="headingOne">
+                      <div class="panel-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
+                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
+                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
+                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
+                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
+                        of them accusamus labore sustainable VHS.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingTwo">
+                      <h4 class="panel-title">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                          href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          무료배송 및 반품
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                      <div class="panel-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
+                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
+                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
+                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
+                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
+                        of them accusamus labore sustainable VHS.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingThree">
+                      <h4 class="panel-title">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                          href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          리뷰
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
+                      aria-labelledby="headingThree">
+                      <div class="panel-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
+                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
+                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
+                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
+                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
+                        of them accusamus labore sustainable VHS.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingThree">
+                      <h4 class="panel-title">
+                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                          href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                          추가정보
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel"
+                      aria-labelledby="headingFour">
+                      <div class="panel-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
+                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
+                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
+                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
+                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
+                        of them accusamus labore sustainable VHS.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
             </div>
           </section>
         </div>
       </section>
     </main>
-    <div class="section-contents">
-      <footer data-include-path="./outline/footer.html"></footer>
-    </div>
+  </div>
+  <div class="section-contents">
+    <footer data-include-path="./outline/footer.html"></footer>
+  </div>
 </body>
 
 </html>
